[package]
name = "dchp_client"
version = "0.1.0"
authors = ["Carlton Perkins <carltonrp52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
itertools = "0.10.0"
rand = "0.8.3"
mac_address = "1.1.1"
log = "0.4.14"
simple_logger = "1.11.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
anyhow = "1.0.40"

[dev-dependencies]
pretty_assertions = "0.7.1"
